--- a/stadvdb/package.json
+++ b/stadvdb/package.json
@@ -2,7 +2,6 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,5 +9,22 @@
   },
   "devDependencies": {
     "vite": "^5.2.0"
-  }
+  },
+  "main": "main.js",
+  "dependencies": {
+    "esbuild": "^0.20.2",
+    "expres": "^0.0.5",
+    "express": "^4.19.2",
+    "mssql": "^10.0.2",
+    "mysql": "^2.18.1",
+    "nanoid": "^3.3.7",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.38",
+    "rollup": "^4.13.0",
+    "source-map-js": "^1.2.0",
+    "ysql": "^0.0.6"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
