--- a/stadvdb/package.json
+++ b/stadvdb/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "vite": "^5.2.0"
   },
   "main": "main.js",
@@ -18,6 +19,7 @@
     "express": "^4.19.2",
     "mssql": "^10.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
     "nanoid": "^3.3.7",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.38",
