--- a/stadvdb/package.json
+++ b/stadvdb/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^3.1.0",
     "vite": "^5.2.0"
   },
-  "main": "main.js",
+  "main": "backend.js",
   "dependencies": {
     "cors": "^2.8.5",
     "esbuild": "^0.20.2",
